# AngelBase

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: shader.slang
assets/shaders/cache/: shader.json
dependencies_cmake/: CMakeLists.txt
engine/core/: AngelBase.cpp  Atomics.cpp  CMakeLists.txt  Fibers.cpp  FileLoaderSystem.cpp  ImGuiSystem.cpp  JobSystem.cpp  JsonParser.cpp  KitsuneEngine.cpp  LogHandler.cpp  ResourceManager.cpp  RingBuffer.cpp  ServiceLocator.cpp  ThreadPool.cpp  allocator.cpp
engine/rendering/: CMakeLists.txt  IRenderer.cpp  RenderTargetManager.cpp  ResourceManager.cpp  ShaderManager.cpp  StreamingManager.cpp  TextureManager.cpp  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanExtensions.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  vkextensions.cpp  vkhelper.cpp  vkrenderer.cpp  vkwindow.cpp
